# Estella

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  appsettings.toml  config.yaml
.github/workflows/: Default.yml  default.yml  github-actions-demo.yml  release.yml
src/: cli.rs  main.rs  membership_mesh.rs  settings.rs
